# DISCO-EB

./: .gitignore  BENCHMARKS.md  CITATION.bib  CONTRIBUTING.md  Neutrinos_jax.ipynb  README.md  compute_galaxy_Pk.py  create_autodiff_plot.py  jax_jacobian_implicit.ipynb  make_autodiff_plot.py  make_comparison_plot.py  nb_massfunctions.ipynb  nb_minimal_example.ipynb  nb_pylinger_autodiff.ipynb  nb_pylinger_class_comparison.ipynb  nb_pylinger_correlation_functions.ipynb  nb_pylinger_fisher_forecast.ipynb  nb_pylinger_kaiser.ipynb  nb_pylinger_rsd_eyes_plot.ipynb  pylinger_background.py  pylinger_cosmo.py  pylinger_cosmo_jax.py  pylinger_cosmo_numpy.py  pylinger_demo.ipynb  pylinger_jax_utils.py  pylinger_perturbations.py  pylinger_pt.py  pylinger_pt_numpy.py  pylinger_pt_optimized.py  pylinger_pt_single_mode.py  pylinger_pt_single_mode_TCA.py  pylinger_pt_single_mode_TCA_nuFA.py  pylinger_pt_single_mode_exposed_param.py  pylinger_thermo.py  pylinger_thermo_jax.py  pylinger_thermodynamics.py  pylinger_thermodynamics_recfast.py  pylinger_util.py  pyproject.toml  run_comp.py  (+3 more)
bdf/: bdf.py  bdf_util.py
discoeb/: cosmo.py  perturbations.py  thermodynamics_mb95.py  util.py
docs/: conf.py  discoeb.rst  index.rst  make_doc.sh  modules.rst  notebooks.rst  paper_scripts.rst
docs/notebooks/: nb_discoeb_class_comparison.ipynb  nb_discoeb_correlation_functions.ipynb  nb_discoeb_fisher_forecast.ipynb  nb_massfunctions.ipynb  nb_minimal_example.ipynb
notebooks/: nb_discoeb_class_comparison.ipynb  nb_discoeb_fisher_forecast.ipynb  nb_massfunctions.ipynb  nb_minimal_example.ipynb  nb_pylinger_rsd_eyes_plot.ipynb
old/: Neutrinos.ipynb  Neutrinos_jax.ipynb  jax_jacobian_implicit.ipynb  pylinger_cosmo_numpy.py  pylinger_pt.py  pylinger_pt_numpy.py  pylinger_pt_single_mode_TCA_soft.py  pylinger_pt_single_mode_exposed_param_minimal.py  pylinger_thermo.py  pylinger_thermo_jax.py
tests/: conftest.py  test_background.py  test_perturbations.py  test_vs_class.py
theory/: equations.tex
(+22 files in other folders)
