[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["discoeb/"]


[project]
name = "discoeb"
version = "0.1.0"
dependencies = [
    "jax",
    "diffrax==0.4.1",
    "equinox",
    "jaxtyping",
    "jax_cosmo"
]
authors = [
    { name = "Oliver Hahn", email = "oliver.hahn@univie.ac.at" },
]

description = "..."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy"
]


[project.urls]
Homepage = "https://github.com/ohahn/DISCO-EB"
Issues = "https://github.com/ohahn/DISCO-EB/issues"
Repository = "https://github.com/ohahn/DISCO-EB.git"
